# statusline

./: .gitignore  README.md  install.py  install.sh  pyproject.toml  statusline.py  test_burn.py
.github/workflows/: ci.yml  publish.yml
docs/: BURN_LINE_IMPLEMENTATION_SPEC.md  CURRENT_ARCHITECTURE_2025.md  DEVELOPMENT_RESTART_GUIDE.md  DEVELOPMENT_SUMMARY_2025.md  DOCUMENTATION_INDEX.md  EXTERNAL_TOOL_VALIDATION_BEST_PRACTICES.md  MULTI_AGENT_DEVELOPMENT_METHODOLOGY.md  MULTI_TOOL_COMPATIBILITY_DEBUGGING_GUIDE.md  TOKEN_CALCULATION_DEBUGGING_GUIDE.md  TOKEN_CALCULATION_GUIDE.md  TROUBLESHOOTING_RUNBOOK.md
tests/: test_statusline.py
tests/fixtures/: transcript_cc_2_1_x.jsonl
