[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccsl"
version = "1.0.3"
description = "Enhanced status line for Claude Code"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "usedhonda" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: User Interfaces",
]

[project.scripts]
ccsl = "statusline:main"

[project.urls]
Homepage = "https://github.com/usedhonda/statusline"
Repository = "https://github.com/usedhonda/statusline"

[tool.hatch.build.targets.wheel]
only-include = ["statusline.py"]

[tool.hatch.build.targets.sdist]
only-include = ["statusline.py", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E402",   # module level import not at top (config vars before imports is intentional)
    "E501",   # line too long (ANSI escape strings are naturally long)
    "E701",   # multiple statements on one line (compact flag switches are intentional)
    "E722",   # bare except (used intentionally for resilience)
    "W291",   # trailing whitespace
    "W292",   # no newline at end of file
    "W293",   # blank line contains whitespace
    "W605",   # invalid escape sequence (ANSI codes)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
